tweaking surefire