@@ -238,6 +238,14 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <threadCount>1</threadCount>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
